--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Reset */
 * {
     box-sizing: border-box;
     margin: 0;
@@ -11,4 +12,110 @@ ol, ul, menu {
 
 .img {
     max-width: 100%;
+}
+a {
+    color: black;
+    text-decoration: none;
+}
+
+
+/* Site Styling */
+
+.logo {
+    width: 3rem;
+    margin-left: 1rem;
+    /* border: 2px solid steelblue; */
+}
+
+header {
+    display: flex;
+    align-items: center;
+}
+.navbar {
+    margin: 2rem;
+}
+
+.main-content-area {
+    grid-template-columns: 1fr 4fr;
+}
+.sidebar-button {
+    padding: .75rem;
+    background-image: linear-gradient(hsl(214, 5%, 45%), hsl(214, 20%, 70%));
+    color: hsl(217, 12%, 83%);
+    margin-top: .4rem;
+    border-radius: 8px;
+}
+.utility-area {
+    align-items: center;
+    justify-content: center;
+}
+
+
+
+/* Calculatos Specific Styling */
+.screen {
+    border: 2px solid goldenrod;
+    height: 3rem;
+    background-color: lightblue;
+    border-radius: 10px;
+}
+
+#input-screen {
+    display: flex;
+    justify-content: end;
+}
+#result-screen {
+    display: flex;
+    justify-content: end;
+    font-size: large;
+
+}
+
+.calculator {
+    border: 4px solid rgb(117, 134, 135);
+    background-color: rgb(117, 134, 135);
+    border-radius: 12px;
+    margin-top: 10px;
+    max-width: 20rem;
+}
+.radio-btns-top {
+    padding: 4px;
+    font-size: small;
+    display: flex;
+    justify-content: space-between;
+}
+
+.button {
+    min-width: 3rem;
+    background-color: ;
+}
+.scientific {
+    display: grid;
+    gap: .3rem; 
+    grid-template-columns: repeat(5, 1fr);   
+    padding: 4px;
+}
+.simple {
+    display: grid;
+    gap: .4rem;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 4px;
+    margin-top: 4px;
+}
+.simple>button {
+    background-color: lightgray;
+}
+/* Utility Class */
+.flex {
+    display: flex;
+    gap: var(--gap, 1rem);
+}
+
+.grid {
+    display: grid;
+    gap: var(--gap, 1rem);
+}
+
+.d-block {
+    display: block;
 }
